tiempo de orden y ranking de pedido