@@ -1,19 +1,26 @@
 package com.pragma.powerup.trazabilidad.infraestructure.output.mongo.adapter;
 
+import com.pragma.powerup.trazabilidad.application.dto.RankingEficienciaEmpleadoDto;
+import com.pragma.powerup.trazabilidad.application.dto.TiempoAtencionPorPedidoDto;
 import com.pragma.powerup.trazabilidad.domain.model.HistorialEstado;
 import com.pragma.powerup.trazabilidad.domain.spi.HistorialEstadoPersistencePort;
 import com.pragma.powerup.trazabilidad.infraestructure.output.mongo.document.HistorialEstadoDocument;
 import com.pragma.powerup.trazabilidad.infraestructure.output.mongo.repository.HistorialEstadoRepository;
 
+import java.time.Duration;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
+import java.util.Comparator;
 import java.util.Date;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 public class HistorialEstadoMongoAdapter implements HistorialEstadoPersistencePort {
 
     private final HistorialEstadoRepository historialEstadoRepository;
+    private static final String ESTADO_PENDIENTE = "PENDIENTE";
+    private static final String ESTADO_ENTREGADO = "ENTREGADO";
 
     public HistorialEstadoMongoAdapter(HistorialEstadoRepository historialEstadoRepository) {
         this.historialEstadoRepository = historialEstadoRepository;
@@ -25,6 +32,7 @@ public class HistorialEstadoMongoAdapter implements HistorialEstadoPersistencePo
         document.setIdPedido(historial.getIdPedido());
         document.setIdCliente(historial.getIdCliente());
         document.setEstadoNuevo(historial.getEstado());
+        document.setIdEmpleado(historial.getIdEmpleado());
         document.setFechaCambio(LocalDateTime.now());
         historialEstadoRepository.save(document);
     }
@@ -41,6 +49,61 @@ public class HistorialEstadoMongoAdapter implements HistorialEstadoPersistencePo
                     historial.setFechaCambio(Date.from(doc.getFechaCambio()
                             .atZone(ZoneId.systemDefault()).toInstant()));
                     return historial;
-                }).collect(Collectors.toList());
+                }).toList();
+    }
+
+    @Override
+    public List<TiempoAtencionPorPedidoDto> obtenerTiemposPorPedido(Long idRestaurante) {
+        List<HistorialEstadoDocument> pendientes = historialEstadoRepository.findByEstadoNuevo(ESTADO_PENDIENTE);
+        List<HistorialEstadoDocument> entregados = historialEstadoRepository.findByEstadoNuevo(ESTADO_ENTREGADO);
+
+        Map<Long, LocalDateTime> pendientesMap = pendientes.stream()
+                .collect(Collectors.toMap(HistorialEstadoDocument::getIdPedido, HistorialEstadoDocument::getFechaCambio));
+
+        return entregados.stream()
+                .filter(ent -> pendientesMap.containsKey(ent.getIdPedido()))
+                .map(ent -> {
+                    long minutos = Duration.between(pendientesMap.get(ent.getIdPedido()), ent.getFechaCambio()).toMinutes();
+                    return new TiempoAtencionPorPedidoDto(
+                            ent.getIdPedido(),
+                            ent.getIdEmpleado(),
+                            ent.getIdCliente(),
+                            minutos
+                    );
+                }).toList();
+    }
+
+    @Override
+    public List<RankingEficienciaEmpleadoDto> obtenerRankingPorEmpleado(Long idRestaurante) {
+        List<HistorialEstadoDocument> pendientes = historialEstadoRepository.findByEstadoNuevo(ESTADO_PENDIENTE);
+        List<HistorialEstadoDocument> entregados = historialEstadoRepository.findByEstadoNuevo(ESTADO_ENTREGADO);
+
+        Map<Long, LocalDateTime> pendientesMap = pendientes.stream()
+                .filter(p -> p.getIdPedido() != null && p.getFechaCambio() != null)
+                .collect(Collectors.toMap(HistorialEstadoDocument::getIdPedido, HistorialEstadoDocument::getFechaCambio));
+
+        // Map de empleado a lista de duraciones
+        Map<Long, List<Long>> tiemposPorEmpleado = entregados.stream()
+                .filter(ent -> pendientesMap.containsKey(ent.getIdPedido()) && ent.getIdEmpleado() != null)
+                .collect(Collectors.groupingBy(
+                        HistorialEstadoDocument::getIdEmpleado,
+                        Collectors.mapping(ent -> Duration.between(
+                                        pendientesMap.get(ent.getIdPedido()),
+                                        ent.getFechaCambio()).toMinutes(),
+                                Collectors.toList()
+                        )
+                ));
+
+        // Calcular promedio por empleado
+        return tiemposPorEmpleado.entrySet().stream()
+                .map(entry -> {
+                    Long idEmpleado = entry.getKey();
+                    List<Long> tiempos = entry.getValue();
+                    double promedio = tiempos.stream().mapToLong(Long::longValue).average().orElse(0.0);
+                    return new RankingEficienciaEmpleadoDto(idEmpleado, promedio);
+                })
+                .sorted(Comparator.comparing(RankingEficienciaEmpleadoDto::getPromedioMinutos))
+                .toList();
+
     }
 }
